@@ -13,7 +13,7 @@ project(DDS*idl): dcps_test_lib {
 }
 
 
-project(DDS*Publisher) : dcpsexe_with_tcp {
+project(DDS*Publisher) : dcpsexe_with_tcp, dcps_rtps_udp {
   exename = publisher
   after  += DDS*idl
   libs   += DDS*idl
@@ -28,7 +28,7 @@ project(DDS*Publisher) : dcpsexe_with_tcp {
   }
 }
 
-project(DDS*Subscriber) : dcpsexe_with_tcp {
+project(DDS*Subscriber) : dcpsexe_with_tcp, dcps_rtps_udp {
   exename = subscriber
   after  += DDS*idl
   libs   += DDS*idl
